  * [SessionS] Added extra condition to determine if the increment is considered the roundIncrement
  * [SessionS] Cloned the charging interval added on EventCost merge 
  * [FilterS] Optimized the automated index fields matching
  * [AgentS] Added *cfg as DataProvider for AgentRequest 
  * [AgentS] Added *routes_maxcost flag
  * [SessionS] Added *sessionChargeable session option to control session charging 
  * [SessionS] Replaced max_call_duration config with default_usage for each ToR
  * [SessionS] Added JSON and GOB BiRPC support
  * [ActionS] Added *add_balance, *set_balance and *rem_balance
  * [RegistrarC] Renamed DispatcherH to RegistrarC
  * [DataDB] Added replication filtering
  * [ApierS] Moved Cache field as options
  * [RouteS] Updated RouteSv1.GetRoutes API to return multiple profiles 
  * [Templates] Added support for Length Field in case of NMSlice
  * [Templates] Added support for multiple indexes
  * [AgentS] Added ~*req prefix for freeswitch extra_fields
  * [AgentS] Changed NavigableMap with DataNode for speed improvements

 -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100